# cpp-raytracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Doxyfile  IntersectionRecord.hpp  LICENSE.txt  Light.hpp  Material.cpp  Material.hpp  PPMImage.cpp  PPMImage.hpp  Plane.cpp  Plane.hpp  README.md  RGBColor.cpp  RGBColor.hpp  RGBPixel.cpp  RGBPixel.hpp  Ray3D.cpp  Ray3D.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Surface.cpp  Surface.hpp  Vector3D.cpp  Vector3D.hpp  main.cpp
doc/html/: PPMImage_8cpp.html  PPMImage_8cpp__incl.dot  PPMImage_8cpp__incl.md5  PPMImage_8hpp_source.html  RGBColor_8cpp.html  RGBColor_8cpp__incl.dot  RGBColor_8cpp__incl.md5  RGBColor_8hpp_source.html  Ray3D_8hpp_source.html  Sphere_8hpp_source.html  Surface_8hpp_source.html  Vector3D_8hpp_source.html  annotated.html  classPPMImage-members.html  classPPMImage.html  classRGBColor-members.html  classRGBColor.html  classRay3D-members.html  classRay3D.html  classSphere-members.html  classSphere.html  classSphere__coll__graph.dot  classSphere__coll__graph.md5  classSphere__inherit__graph.dot  classSphere__inherit__graph.md5  classSurface-members.html  classSurface.html  classSurface__inherit__graph.dot  classSurface__inherit__graph.md5  classVector3D-members.html  classVector3D.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  (+16 more)
doc/latex/: PPMImage_8cpp.tex  PPMImage_8cpp__incl.dot  PPMImage_8cpp__incl.md5  RGBColor_8cpp.tex  RGBColor_8cpp__incl.dot  RGBColor_8cpp__incl.md5  annotated.tex  classPPMImage.tex  classRGBColor.tex  classRay3D.tex  classSphere.tex  classSphere__coll__graph.dot  classSphere__coll__graph.md5  classSphere__inherit__graph.dot  classSphere__inherit__graph.md5  classSurface.tex  classSurface__inherit__graph.dot  classSurface__inherit__graph.md5  files.tex  (+8 more)
include/: Camera.hpp  Light.hpp  Material.hpp  PPMImage.hpp  Plane.hpp  RGBColor.hpp  Ray3D.hpp  Sphere.hpp  Vector3D.hpp
outputs/: myscene.ppm
scenes/: 1sphere.txt  2spheres433.txt  3spheres433.txt  box433.txt  mickey433.txt  myscene.txt  only1sphere.txt
src/: Camera.cpp  Light.cpp  PPMImage.cpp  RGBColor.cpp  Ray3D.cpp  Scene.cpp  Sphere.cpp  Surface.cpp  Vector3D.cpp  main.cpp
test/: Camera.hpp  Makefile  tests-PPMImage.cpp  tests-RGBColor.cpp  tests-RGBPixel.cpp  tests-Ray3D.cpp  tests-Scene.cpp  tests-Sphere.cpp  tests-Vector3D.cpp  tests-main.cpp
written/: q2.txt  q3.txt  q4.txt  q5.txt
(+22 files in other folders)
